RESOLVED FIXED209891
ASSERTION FAILED: m_delegate in IDBConnectionToClient::identifier()
https://bugs.webkit.org/show_bug.cgi?id=209891
Summary ASSERTION FAILED: m_delegate in IDBConnectionToClient::identifier()
Sihui Liu
Reported 2020-04-01 19:29:11 PDT
Attachments
Patch (12.02 KB, patch)
2020-04-01 19:39 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2020-04-01 19:39:25 PDT
Geoffrey Garen
Comment 2 2020-04-02 15:35:29 PDT
Comment on attachment 395237 [details] Patch r=me
EWS
Comment 3 2020-04-03 08:43:08 PDT
Committed r259461: <https://trac.webkit.org/changeset/259461> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395237 [details].
Radar WebKit Bug Importer
Comment 4 2020-04-03 08:44:12 PDT
Note You need to log in before you can comment on or make changes to this bug.