Source/WebCore/Modules/indexeddb/server/IDBConnectionToClient.cpp
@@ -200,15 +200,15 @@ void IDBConnectionToClient::unregisterDatabaseConnection(UniqueIDBDatabaseConnec
 
 void IDBConnectionToClient::connectionToClientClosed()
 {
+    m_isClosed = true;
     auto databaseConnections = m_databaseConnections;
 
-    for (auto connection : databaseConnections) {
-        if (m_databaseConnections.contains(connection))
-            connection->connectionClosedFromClient();
+    for (auto* connection : databaseConnections) {
+        ASSERT(m_databaseConnections.contains(connection));
+        connection->connectionClosedFromClient();
     }
 
-    m_isClosed = true;
-    m_databaseConnections.clear();
+    ASSERT(m_databaseConnections.isEmpty());
 }
 
 } // namespace IDBServer
